# EfNet_train

./: .gitignore  README.md  agent.md  compress_dataset.py  dataset.py  eval_test.py  infer.py  main.py  make_multilabel_csv.py  predict_api.py  prepare_data.py  pyproject.toml  train.py
