[project]
name = "efficient-net-playground"
version = "0.1.0"
description = "EfficientNet image classification for eBay trading card images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "mlflow>=2.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "gunicorn>=21.0.0",
]
